tests/sources/invalid/generics/generic_call_constraint_violation.fire
// Semantic error: explicit type argument for a generic function call that
// violates the function's declared type constraint.

T identity<T: int32 | int64>(T value) {
    return value;
}

void generic_call_constraint_violation() {
    int32 x = identity<string>(5);  //~ ERROR FS-SEM-0010 @15
//~^ ERROR FS-SEM-0002 @11
}
